<package format="3">
  <name>gazebo_ros2_link_attacher</name>
  <version>0.1.0</version>
  <description>ROS2 Gazebo Plugin to attach/detach links at runtime</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

